# DanceVision

./: .gitmodules  Dockerfile
scripts/: get_local_address.sh  main.sh  opencv-build-script.sh  pyproject.toml  setup_ros_variables.sh  startup_command_listener.sh  startup_server.sh  startup_video_streamer.sh
scripts/src/dancevision_startup/: commands.py  constants.py  environment.py  full_startup.py  get_hostname.py  launch_command_listener.py  launch_planner.py  launch_video_streamer.py  startup_command_listener.sh  startup_server.py  startup_server.sh  startup_video_streamer.sh
